// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pdpi;

import "p4/config/v1/p4info.proto";
import "p4/v1/p4runtime.proto";

message Tests {
  repeated Test tests = 1;
}

message Test {
  string name = 1;
  oneof kind {
    InfoTest info_test = 2;
    TableEntryTest table_entry_test = 3;
  }
}

// A P4 info file, either inline or referring to one by path to allow reuse.
message P4Info {
  oneof source {
    p4.config.v1.P4Info direct = 1;
    // Path to the P4 info file.
    string indirect = 2;
  }
}

message InfoTest {
  P4Info p4info = 1;
}

message TableEntryTest {
  P4Info p4info = 1;
  repeated PiTableEntryCase pi_table_entry_cases = 2;
}

message PiTableEntryCase {
  string name = 1;
  p4.v1.TableEntry pi = 2;
}
