// P4 program-dependent proto definitions for use in NIB tables and SFE API.
// Automatically generated from the P4 program.

syntax = "proto3";

package p4.pdpi_proto;

import "testdata/pdpi_p4common.proto";

//  Table Entry Messages

message Table1Entry {
  message Match {
    bool meta_field1 = 1;    //  1 bits
    uint32 meta_field2 = 2;  //  2 bits
    uint32 meta_field3 = 3;  //  32 bits
    uint64 meta_field4 = 4;  //  33 bits
    uint64 meta_field5 = 5;  //  64 bits
    bytes meta_field6 = 6;   //  65 bits
    bytes meta_field7 = 7;   //  1024 bits
  }
  Match match = 1;
  message Action {
    oneof action {
      Action1Action action1 = 1;
      Action2Action action2 = 2;
      NoActionAction no_action = 3;
    }
  }
  Action action = 2;
}

message Table2Entry {
  message Match {
    bool meta_field1 = 2;    //  1 bits
    uint32 meta_field2 = 1;  //  2 bits
  }
  Match match = 1;
  message Action {
    oneof action {
      Action1Action action1 = 1;
      NoActionAction no_action = 2;
    }
  }
  Action action = 2;
}

message Table3Entry {
  message Match {
    bool meta_field1 = 1;          //  1 bits
    p4.Ternary meta_field2 = 2;  //  2 bits
    p4.LPM meta_field3 = 3;      //  32 bits
  }
  Match match = 1;
  message Action {
    oneof action {
      Action1Action action1 = 1;
      NoActionAction no_action = 2;
    }
  }
  Action action = 2;
}

//  TableEntry Message with one of each table-specific *TableEntry message

message TableEntry {
  oneof entry {
    Table1Entry table1_entry = 1;
    Table2Entry table2_entry = 2;
    Table3Entry table3_entry = 3;
  }
}

//  Action Type Messages

message Action1Action {
  uint32 arg1 = 2;  // 32 bits
  uint32 arg2 = 1;  // 32 bits
}

message Action2Action {
  bool arg1 = 1;    // 1 bits
  uint32 arg2 = 2;  // 2 bits
  uint32 arg3 = 3;  // 32 bits
  uint64 arg4 = 4;  // 33 bits
  uint64 arg5 = 5;  // 64 bits
  bytes arg6 = 6;   // 65 bits
  bytes arg7 = 7;   // 1024 bits
}

message NoActionAction {}
